Update 第0章 はじめに.md.

--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -554,7 +554,13 @@ If {dot} 友人 {dot} 誕生日 {dot} 日付として正しい、みたいな。
 
 次章からは、これらの概念をより詳細に、体系的に学んでいく。美しいコードを書くための原則と実践を、共に探求していこう。
 
-## 著者
+## 補足
+
+### 本書における C# でのサンプル コードについて
+
+サンプル コードは C# で書かれているが、あえて 最新の C# の文法を避け、C# 独特の表現は少し抑え気味にしている。
+
+### 著者
 
 小島 富治雄
 
