--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -566,8 +566,8 @@ If {dot} 友人 {dot} 誕生日 {dot} 日付として正しい、みたいな。
 
 I'm a software development engineer. (Microsoft MVP Jul. 2005 - Jun. 2026)
 
-X: [https://x.com/Fujiwo](https://x.com/Fujiwo)
-LinkedIn: [https://www.linkedin.com/in/fujiwo/](https://www.linkedin.com/in/fujiwo/)
-GitHub: [https://github.com/Fujiwo](https://github.com/Fujiwo)
-Blog: [http://wp.shos.info](http://wp.shos.info)
+- X: [https://x.com/Fujiwo](https://x.com/Fujiwo)
+- LinkedIn: [https://www.linkedin.com/in/fujiwo/](https://www.linkedin.com/in/fujiwo/)
+- GitHub: [https://github.com/Fujiwo](https://github.com/Fujiwo)
+- Blog: [http://wp.shos.info](http://wp.shos.info)
 
