--- a/レビュー結果_001.md
+++ b/レビュー結果_001.md
@@ -176,7 +176,7 @@ var customer = repository.FindById(customerId)
 3. **中期計画**: 残り章の執筆完了
 4. **長期計画**: 図表追加、ケーススタディ充実
 
-本書は既に高い品質を持っており、小島富治雄氏の思想を適切に体系化できています。上記の修正により、さらに完成度の高い実践的な技術書になると確信しています。
+本書は既に高い品質を持っており、著者の思想を適切に体系化できています。上記の修正により、さらに完成度の高い実践的な技術書になると確信しています。
 
 ---
 
