Add 「2.3 名前付けで 語彙 (vocabulary) を整える」.

--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -18,7 +18,7 @@
 
 ## 本書が解決する根本的な問題
 
-本書は、小島富治雄氏の長年にわたるソフトウェア開発の知見をまとめた、プログラミングのベストプラクティスと原則に関する実践的なガイドである。
+本書は、著者の長年にわたるソフトウェア開発の知見をまとめた、プログラミングのベストプラクティスと原則に関する実践的なガイドである。
 
 私たちが取り組む問題は、単なるコーディングテクニックの話ではない。それは、以下のような根本的な課題である:
 
