--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -67,13 +67,13 @@ public class OrderProcessor
     {
         // データ解析の関心事
         var parts = orderData.Split(',');
-        
+       
         // ビジネスルールの関心事
-        if (decimal.Parse(parts[2]) > 1000) 
+        if (decimal.Parse(parts[2]) > 1000)
         {
             // データ永続化の関心事
             SaveToDatabase(parts);
-            
+           
             // 通知の関心事
             SendEmail(parts[0]);
         }
@@ -89,7 +89,7 @@ public class OrderProcessor
     private readonly IOrderValidator _validator;
     private readonly IOrderRepository _repository;
     private readonly INotificationService _notificationService;
-    
+   
     public void ProcessOrder(string orderData)
     {
         var order = _parser.Parse(orderData);      // データ解析
@@ -153,7 +153,7 @@ public class PriceCalculator  // 価格計算に責務を限定
         // データ保存や通知は責務外
         return items.Sum(item => item.Price * item.Quantity);
     }
-    
+   
     // 以下のようなメソッドは責務外なので含めない
     // void SaveOrder(Order order)  ← データ保存は別の責務
     // void SendEmail(string email)  ← 通知も別の責務
@@ -175,7 +175,7 @@ namespace OrderManagement  // 注文管理という大きな概念
         private readonly PriceCalculator _calculator;   // 価格計算という小さな概念
         private readonly InventoryChecker _inventory;   // 在庫確認という小さな概念
     }
-    
+   
     // 各概念がさらに細かい概念に分解される
     public class OrderValidator
     {
@@ -186,15 +186,44 @@ namespace OrderManagement  // 注文管理という大きな概念
 }
 ```
 
-## 2.3 サービス指向名前付け(SON)
+## 2.3 名前付けで 語彙 (vocabulary) を整える
 
-### 2.3.1 SONの基本思想
+型やメソッド、変数を作るときに、適切な名前を付ける。
+そうすることで、プログラムの一部を抽象化し、部品として扱えるようにする。
+そして、それらでプログラムを記述できるようにする。
+つまり、型やメソッド、変数が、プログラムを記述するための語彙になるのである。
+
+** どんな語彙で記述したいか **
+
+プログラムをどういう語彙で記述したいか、という基準で型やメソッド、変数を切り出すようにする。
+
+例えば、
+
+```csharp
+if (name.Length > 0) …
+```
+
+ではなく、
+
+```csharp
+if (IsValid(name)) …
+```
+
+とわざわざ IsValid メソッドを作ってまで書くのは、「このロジックをその語彙で書きたい」時、つまり「その抽象度で書きたい」時である。
+
+「では、どの抽象度で書きたいのか?」といえば、それは「人がそれを記述するときにもっとも自然な抽象度」ということになる。例えば、「最寄りの空港に行く」というメソッド内部は、それを自然言語で「もっとも簡潔に」記述するときの粒度で書きたい。
+
+何故かというと、「それが我々には解りやすい」からである。
+
+## 2.4 サービス指向名前付け(Service Oriented Naming: SON)
+
+### 2.4.1 SONの基本思想
 
 Service Oriented Naming(SON)は、**クライアント(利用者)の視点**で名前を決定するアプローチである。重要なのは「提供者がどう実装するか」ではなく、「利用者がどう使いたいか」である。
 
 ![Service Oriented Naming 概念図](Images/service-oriented-naming-concept.md)
 
-### 2.3.2 ユーザーインターフェースとしての名前
+### 2.4.2 ユーザーインターフェースとしての名前
 
 プログラムの名前は、そのコンポーネントの**ユーザーインターフェース**である:
 
@@ -232,7 +261,7 @@ var customer = repository.FindById(customerId);
 // 実装詳細は隠蔽されている
 ```
 
-### 2.3.3 サービスとしてのメソッド
+### 2.4.3 サービスとしてのメソッド
 
 各メソッドは、クライアントに対する**サービス**として設計すべきである:
 
@@ -244,7 +273,7 @@ public class EmailService  // クライアントにメール機能を提供
     {
         // 実装詳細(SMTPサーバー、メールテンプレートなど)は隠蔽
     }
-    
+   
     // クライアントが欲しいサービス:「管理者に警告する」
     public void AlertAdministrator(string alertMessage)
     {
@@ -253,7 +282,7 @@ public class EmailService  // クライアントにメール機能を提供
 }
 ```
 
-### 2.3.4 ドメイン固有の語彙
+### 2.4.4 ドメイン固有の語彙
 
 サービス指向の命名では、そのドメイン(問題領域)で使われる自然な語彙を採用する:
 
@@ -277,9 +306,9 @@ public class ShoppingCart  // ショッピングカート
 }
 ```
 
-## 2.4 命名のアンチパターンと対策
+## 2.5 命名のアンチパターンと対策
 
-### 2.4.1 数字を付ける
+### 2.5.1 数字を付ける
 
 #### アンチパターン
 ```csharp
@@ -288,7 +317,7 @@ public class CustomerService1
     public void ProcessCustomer1(Customer customer) { }
 }
 
-public class CustomerService2  
+public class CustomerService2 
 {
     public void ProcessCustomer2(Customer customer) { }
 }
@@ -312,7 +341,7 @@ public class CustomerNotificationService
 }
 ```
 
-### 2.4.2 省略する
+### 2.5.2 省略する
 
 #### アンチパターン
 ```csharp
@@ -339,7 +368,7 @@ public class CustomerManager
 }
 ```
 
-### 2.4.3 意味不明な名前
+### 2.5.3 意味不明な名前
 
 #### アンチパターン
 ```csharp
@@ -366,7 +395,7 @@ public class OrderValidationResult
 }
 ```
 
-### 2.4.4 型名を含める
+### 2.5.4 型名を含める
 
 #### アンチパターン
 ```csharp
@@ -386,9 +415,9 @@ public class OrderClass { }
 public class Customers : IEnumerable<Customer>  // 概念を表現
 {
     private readonly List<Customer> _customers = new();
-    
+   
     public void Add(Customer customer) => _customers.Add(customer);
-    public Customer FindByEmail(string email) => 
+    public Customer FindByEmail(string email) =>
         _customers.FirstOrDefault(c => c.Email == email);
 }
 
@@ -398,14 +427,14 @@ public interface IOrderLookup  // 振る舞いを表現
 }
 ```
 
-### 2.4.5 統一感がない
+### 2.5.5 統一感がない
 
 #### アンチパターン
 ```csharp
 public class CustomerService
 {
     public Customer GetCustomer(int id) { }      // Get prefix
-    public Order RetrieveOrder(int id) { }      // Retrieve prefix  
+    public Order RetrieveOrder(int id) { }      // Retrieve prefix 
     public Product FetchProduct(int id) { }     // Fetch prefix
     public void SaveCustomer(Customer c) { }    // Save verb
     public void StoreOrder(Order o) { }         // Store verb
@@ -426,16 +455,16 @@ public class CustomerService
     public Customer FindById(int customerId) { }
     public Order FindOrderById(int orderId) { }
     public Product FindProductById(int productId) { }
-    
+   
     public void Save(Customer customer) { }
     public void Save(Order order) { }
     public void Save(Product product) { }
 }
 ```
 
-## 2.5 実践演習:効果的な命名技法
+## 2.6 実践演習:効果的な命名技法
 
-### 2.5.1 命名の段階的改善
+### 2.6.1 命名の段階的改善
 
 #### Step 1: 現状分析
 
@@ -446,7 +475,7 @@ public class DataProcessor
 {
     private List<object> list1;
     private Dictionary<string, object> dict1;
-    
+   
     public void Process(object input)
     {
         // データ処理
@@ -454,13 +483,13 @@ public class DataProcessor
         Save(result);
         Send(result);
     }
-    
+   
     private object DoWork(object data)
     {
         // 複雑な処理
         return null;
     }
-    
+   
     private void Save(object obj) { }
     private void Send(object obj) { }
 }
@@ -482,20 +511,20 @@ public class OrderProcessor  // より具体的な名前
 {
     private List<Order> pendingOrders;        // 具体的な型と意味
     private Dictionary<string, Product> productCatalog;  // 意味のある名前
-    
+   
     public void ProcessOrder(Order order)    // 具体的な引数型
     {
         var validatedOrder = ValidateOrder(order);  // 明確な処理内容
         SaveOrder(validatedOrder);
         SendConfirmation(validatedOrder);
     }
-    
+   
     private Order ValidateOrder(Order order)  // 処理内容が明確
     {
         // 注文検証処理
         return order;
     }
-    
+   
     private void SaveOrder(Order order) { }
     private void SendConfirmation(Order order) { }
 }
@@ -508,28 +537,28 @@ public class OrderProcessingWorkflow  // ワークフロー全体を管理
     private readonly IOrderValidator _validator;
     private readonly IOrderRepository _repository;
     private readonly ICustomerNotificationService _notificationService;
-    
+   
     public async Task<OrderProcessingResult> ProcessNewOrder(Order order)
     {
         var validationResult = await _validator.ValidateAsync(order);
         if (!validationResult.IsValid)
             return OrderProcessingResult.ValidationFailed(validationResult.Errors);
-            
+           
         await _repository.SaveAsync(order);
         await _notificationService.SendOrderConfirmationAsync(order);
-        
+       
         return OrderProcessingResult.Success(order);
     }
 }
 ```
 
-### 2.5.2 ドメイン概念の抽出
+### 2.6.2 ドメイン概念の抽出
 
 #### 演習: ECサイトの概念モデリング
 
 以下の要求から適切なクラス名とメソッド名を抽出せよ:
 
-**要求**: 
+**要求**:
 「顧客は商品をショッピングカートに追加し、決済を行い、注文を確定する。注文が確定すると在庫から商品が引き当てられ、出荷準備が開始される。」
 
 #### 解答例:
@@ -576,7 +605,7 @@ public class ShippingService
 }
 ```
 
-### 2.5.3 メタファ(隠喩)の活用
+### 2.6.3 メタファ(隠喩)の活用
 
 #### 概念
 
@@ -624,7 +653,7 @@ public class ProductCatalogCache
 }
 ```
 
-### 2.5.4 命名の一貫性チェックリスト
+### 2.6.4 命名の一貫性チェックリスト
 
 以下のチェックリストを使用して命名の品質を評価せよ:
 
@@ -653,7 +682,7 @@ public class ProductCatalogCache
 - [ ] 推測可能な名前になっているか?
 - [ ] 略語や暗号的な表現を避けているか?
 
-### 2.5.5 実践的命名パターン
+### 2.6.5 実践的命名パターン
 
 #### パターン1: 正しい英語文法の適用
 
@@ -725,13 +754,13 @@ public class FileManager
 {
     // ファイルが存在するかチェック
     public bool FileExists(string filePath) { }      // ✓ 自然な表現
-    
+   
     // ファイルを削除する
     public void DeleteFile(string filePath) { }      // ✓ SVO構造
-    
+   
     // ファイルをコピーする
     public void CopyFile(string source, string destination) { } // ✓ SVO構造
-    
+   
     // ファイルが別のファイルと同じかチェック
     public bool FileEqualsWith(string file1, string file2) { }  // ✓ 自動詞+前置詞
 }
@@ -741,13 +770,13 @@ public class CustomerRepository
 {
     // 顧客を見つける
     public Customer FindCustomer(int id) { }         // ✓ SVO構造
-    
+   
     // 顧客が存在するかチェック
     public bool CustomerExists(int id) { }           // ✓ 自然な表現
-    
+   
     // 顧客を保存する
     public void SaveCustomer(Customer customer) { }  // ✓ SVO構造
-    
+   
     // 顧客と関連するかチェック
     public bool RelatesTo(Order order) { }           // ✓ 自動詞+前置詞
 }
