--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -6,106 +6,107 @@
 ---
 
 ## 第0章 はじめに
-0.1 なぜあなたのコードは6ヶ月後に読めなくなるのか?  
-0.2 ソフトウェア開発の本当の挑戦  
-0.3 本書が解決する根本的な問題  
-0.4 この本で学べること  
-0.5 読者の皆さんへ  
-0.6 NotebookLMによる解説コンテンツ  
+0.1 なぜあなたのコードは6ヶ月後に読めなくなるのか? 
+0.2 ソフトウェア開発の本当の挑戦 
+0.3 本書が解決する根本的な問題 
+0.4 この本で学べること 
+0.5 読者の皆さんへ 
+0.6 NotebookLMによる解説コンテンツ 
 
 ---
 
 ## 第I部:基礎原則編
 
 ### 第1章 美しいソースコードの基本原則
-1.1 美しいソースコードとは何か  
-1.2 美しいソースコードのための七箇条  
-1.3 品質属性と美しいコードの関係  
-1.4 美しいコードがもたらすビジネス価値  
-1.5 実践演習:コード品質の評価  
-1.6 学習の段階:守破離の原則  
+1.1 美しいソースコードとは何か 
+1.2 美しいソースコードのための七箇条 
+1.3 品質属性と美しいコードの関係 
+1.4 美しいコードがもたらすビジネス価値 
+1.5 実践演習:コード品質の評価 
+1.6 学習の段階:守破離の原則 
 
 ### 第2章 命名の重要性とベストプラクティス
-2.1 命名はモデリングの核心  
-2.2 Name and Conquer:定義攻略の技法  
-2.3 サービス指向名前付け(SON)  
-2.4 命名のアンチパターンと対策  
-2.5 実践演習:効果的な命名技法  
+2.1 命名はモデリングの核心 
+2.2 Name and Conquer:定義攻略の技法 
+2.3 名前付けで 語彙 (vocabulary) を整える 
+2.4 サービス指向名前付け(SON)
+2.5 命名のアンチパターンと対策 
+2.6 実践演習:効果的な命名技法 
 
 ### 第3章 モデリングとしてのプログラミング
-3.1 プログラミングは設計+実装+テスト  
-3.2 関心の分離とモデル化  
-3.3 抽象化と具体化のバランス  
-3.4 ドメインモデルとコードの対応  
-3.5 実践演習:モデル駆動設計  
+3.1 プログラミングは設計+実装+テスト 
+3.2 関心の分離とモデル化 
+3.3 抽象化と具体化のバランス 
+3.4 ドメインモデルとコードの対応 
+3.5 実践演習:モデル駆動設計 
 
 ---
 
 ## 第II部:設計原則編
 
 ### 第4章 マルチパラダイムプログラミング
-4.1 パラダイムの進化と選択  
-4.2 命令型vs宣言型プログラミング  
-4.3 オブジェクト指向パラダイム  
-4.4 関数型プログラミングの活用  
-4.5 実践演習:パラダイムの使い分け  
+4.1 パラダイムの進化と選択 
+4.2 命令型vs宣言型プログラミング 
+4.3 オブジェクト指向パラダイム 
+4.4 関数型プログラミングの活用 
+4.5 実践演習:パラダイムの使い分け 
 
 ### 第5章 オブジェクト指向設計の真髄
-5.1 単一責務原則の深い理解  
-5.2 カプセル化と情報隠蔽  
-5.3 継承と委譲の適切な使い分け  
-5.4 ポリモーフィズムの効果的活用  
-5.5 実践演習:オブジェクト指向設計  
+5.1 単一責務原則の深い理解 
+5.2 カプセル化と情報隠蔽 
+5.3 継承と委譲の適切な使い分け 
+5.4 ポリモーフィズムの効果的活用 
+5.5 実践演習:オブジェクト指向設計 
 
 ### 第6章 テスト駆動開発とTestable設計
-6.1 Testableな設計の重要性  
-6.2 単体テストの基本原則  
-6.3 テスト駆動開発(TDD)の実践  
-6.4 テストコードの品質向上  
-6.5 実践演習:TDDによる開発  
+6.1 Testableな設計の重要性 
+6.2 単体テストの基本原則 
+6.3 テスト駆動開発(TDD)の実践 
+6.4 テストコードの品質向上 
+6.5 実践演習:TDDによる開発 
 
 ---
 
 ## 第III部:実践技法編
 
 ### 第7章 リファクタリングと継続的品質改善
-7.1 リファクタリングの基本原則  
-7.2 コードの臭いと対処法  
-7.3 段階的改善のアプローチ  
-7.4 レガシーコードの扱い方  
-7.5 実践演習:リファクタリング技法  
+7.1 リファクタリングの基本原則 
+7.2 コードの臭いと対処法 
+7.3 段階的改善のアプローチ 
+7.4 レガシーコードの扱い方 
+7.5 実践演習:リファクタリング技法 
 
 ### 第8章 実践的なコーディング手法
-8.1 Think Simple:複雑さを避ける技法  
-8.2 意図を表現するコーディング  
-8.3 エラーハンドリングの最適化  
-8.4 パフォーマンスと可読性のバランス  
-8.5 実践演習:コーディング技法の応用  
+8.1 Think Simple:複雑さを避ける技法 
+8.2 意図を表現するコーディング 
+8.3 エラーハンドリングの最適化 
+8.4 パフォーマンスと可読性のバランス 
+8.5 実践演習:コーディング技法の応用 
 
 ### 第9章 チーム開発における品質管理
-9.1 コードレビューの効果的実践  
-9.2 コーディング規約の策定と運用  
-9.3 継続的インテグレーション  
-9.4 技術的負債の管理  
-9.5 実践演習:チーム品質向上策  
+9.1 コードレビューの効果的実践 
+9.2 コーディング規約の策定と運用 
+9.3 継続的インテグレーション 
+9.4 技術的負債の管理 
+9.5 実践演習:チーム品質向上策 
 
 ---
 
 ## 第IV部:現代的技術編
 
 ### 第10章 現代的なプログラミング技術と将来展望
-10.1 C#の進化とマルチパラダイム化  
-10.2 DSL(ドメイン特化言語)の活用  
-10.3 並列プログラミングとスケーラビリティ  
-10.4 クラウド時代のアーキテクチャ  
-10.5 将来のプログラミング技術動向  
-10.6 実践演習:現代技術の統合  
+10.1 C#の進化とマルチパラダイム化 
+10.2 DSL(ドメイン特化言語)の活用 
+10.3 並列プログラミングとスケーラビリティ 
+10.4 クラウド時代のアーキテクチャ 
+10.5 将来のプログラミング技術動向 
+10.6 実践演習:現代技術の統合 
 
 ### 第11章 終わりに
-11.1 美しいコードへの道のり  
-11.2 継続的な学習と成長  
-11.3 プログラミングの哲学  
-11.4 次世代への提言  
+11.1 美しいコードへの道のり 
+11.2 継続的な学習と成長 
+11.3 プログラミングの哲学 
+11.4 次世代への提言 
 
 ---
 
@@ -119,9 +120,9 @@
 
 ---
 
-**対象読者**:初心者から上級者まで全レベル  
-**想定ページ数**:300ページ以上  
-**コード例言語**:C#、Java、Python、JavaScript等  
+**対象読者**:初心者から上級者まで全レベル 
+**想定ページ数**:300ページ以上 
+**コード例言語**:C#、Java、Python、JavaScript等 
 **著者**:小島 富治雄
 
 ---
