--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -206,12 +206,11 @@ namespace OrderManagement  // 注文管理という大きな概念
 
 ## 2.3 名前付けで 語彙 (vocabulary) を整える
 
-型やメソッド、変数を作るときに、適切な名前を付ける。
-そうすることで、プログラムの一部を抽象化し、部品として扱えるようにする。
-そして、それらでプログラムを記述できるようにする。
-つまり、型やメソッド、変数が、プログラムを記述するための語彙になるのである。
+型やメソッド、変数を作るときに、適切な名前を付ける。そうすることで、プログラムの一部を抽象化し、部品として扱えるようにする。そして、それらでプログラムを記述できるようにする。つまり、型やメソッド、変数が、プログラムを記述するための語彙になるのである。
 
-** どんな語彙で記述したいか **
+設計で重要な行為が、この「プログラムを記述する語彙を作る作業」である。クラスやメソッド、変数を設計するときに、関心事を切り出して (或いは分割して) 名前を付ける。それは、プログラムを記述する語彙を作ってることになる。名前付けによって、語彙を整えるのである。
+
+**「どんな語彙で記述したいか」**
 
 プログラムをどういう語彙で記述したいか、という基準で型やメソッド、変数を切り出すようにする。
 
