--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -202,9 +202,17 @@ namespace OrderManagement  // 注文管理という大きな概念
         private readonly PaymentValidator _paymentValidator;    // 支払い検証
     }
 }
+
+<!-- 図2.2: Name and Conquer フローチャート -->
+![図2.2 Name and Conquer フローチャート](Images/02-name-and-conquer-flow.svg)
+
 ```
 
+
 ## 2.3 名前付けで 語彙 (vocabulary) を整える
+
+<!-- 図2.3: 語彙マップ -->
+![図2.3 語彙マップ](Images/02-vocabulary-map.svg)
 
 型やメソッド、変数を作るときに、適切な名前を付ける。そうすることで、プログラムの一部を抽象化し、部品として扱えるようにする。そして、それらでプログラムを記述できるようにする。つまり、型やメソッド、変数が、プログラムを記述するための語彙になるのである。
 
