--- a/MarkDown/第5章_オブジェクト指向設計の真髄.md
+++ b/MarkDown/第5章_オブジェクト指向設計の真髄.md
@@ -297,14 +297,14 @@ public class Customer
 }
 ```
 
-### 5.1.4 コヘージョン(結束度)とカップリング(結合度)
+### 5.1.4 凝集度(cohesion)と結合度(coupling)
 
-#### 高いコヘージョンの実現
+#### 高い凝集度(high cohesion)の実現
 
-高いコヘージョンとは、クラス内の要素が密接に関連し、共通の目的を持つことである。
+高い凝集度とは、クラス内の要素が密接に関連し、共通の目的を持つことである。
 
 ```csharp
-// 高いコヘージョンの例
+// 高い凝集度の例
 public class PriceCalculator
 {
     private readonly ITaxService _taxService;
@@ -346,7 +346,7 @@ public class PriceCalculator
 }
 ```
 
-#### 低いカップリングの実現
+#### 低い結合度(low coupling)の実現
 
 ```csharp
 // 疎結合な設計:インターフェースによる抽象化
