--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -256,7 +256,7 @@ AI時代のプログラマーには、以下のスキルが重要になる:
 
 ### 本書における C# でのサンプル コードについて
 
-サンプル コードは C# で書かれているが、あえて 最新の C# の文法を避け、C# 独特の表現は少し抑え気味にしている。
+サンプル コードは C#/Java/JavaScript/Python などで書かれていて C# をメインで使用している。C# は、あえて最新の文法を避け、C# 独特の表現を少し抑え気味にしている。
 
 ### 著者
 
