Update "第0章 はじめに.md".

--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -30,7 +30,7 @@
 
 私たちが取り組む問題は、単なるコーディングテクニックの話ではない。それは、以下のような根本的な課題である:
 
-- **複雑さとの戦い**: ソフトウェアシステムは本質的に複雑で、エントロピー(無秩序)は常に増大する傾向にある
+- **複雑さとの戦い**: ソフトウェアシステムは本質的に複雑で、エントロピー(無秩序さ)は常に増大する傾向にある
 - **コミュニケーションの問題**: コードは機械への指示であると同時に、人間への伝達手段でもある
 - **保守性の確保**: 変更しやすく、理解しやすいコードを書く技術
 - **設計の本質**: 命名やモデリングといった、設計の核心的な技術
