Update "第0章 はじめに.md".

--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -260,9 +260,13 @@ AI時代のプログラマーには、以下のスキルが重要になる:
 
 ### 著者
 
+![著者](Images/fujiwo.2018-03-07.jpg "著者")
 小島 富治雄
 
-I'm a software development engineer. (Microsoft MVP Jul. 2005 - Jun. 2026)
+ソフトウェア開発エンジニアです。
+プログラミングを20年くらい教えています。
+
+([Microsoft MVP Jul. 2005 - Jun. 2026](https://mvp.microsoft.com/en-US/MVP/profile/4185d172-3c9a-e411-93f2-9cb65495d3c4))
 
 - X: [https://x.com/Fujiwo](https://x.com/Fujiwo)
 - LinkedIn: [https://www.linkedin.com/in/fujiwo/](https://www.linkedin.com/in/fujiwo/)
