--- a/MarkDown/表紙.md
+++ b/MarkDown/表紙.md
@@ -1,1 +1,6 @@
-![表紙](Images/cover.png)
+# 美しいコードの原則 — 意図を伝える設計と実践
+
+～AI時代だからこそ～
+(C#/Java/JavaScript/Python などによるサンプル コード付き)
+
+![美しいコードの原則 — 意図を伝える設計と実践 ～AI時代だからこそ～ C#/Java/JavaScript/Python などによるサンプル コード付き](Images/cover.png)
