--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -405,7 +405,7 @@ if (IsValid(name)) …
 
 ## 2.5 サービス指向名前付け(Service Oriented Naming: SON)
 
-### 2.5.0 インターフェイスによる名前付け
+### 2.5.1 インターフェイスによる名前付け
 
 考えてみよう。
 
@@ -415,59 +415,61 @@ if (IsValid(name)) …
 本来は:
 tele-vision、tele-phone
 ⇒「遠くに映像や音声をとどけるシステム全体の名前」
+の筈である。
 
-じゃー これは間違い?
+じゃー 次の認識は間違いなのだろうか?
+
 これがテレビ? これが電話?
 ![テレビと電話](Images/2.5.tvandphone.1.png)
 
-「いいえ。」
-それこそがエンジニアの持つべき視点。
+いや、そうではない。それこそがエンジニアの持つべき視点なのである。
 
-それらは、システムがユーザーに提供するインターフェイス。
+それらは、システムがユーザーに提供するインターフェイスである。
 ![テレビと電話](Images/2.5.tvandphone.1.png)
 
-ユーザー インターフェイスが名前になる。
+ユーザー インターフェイスが名前になっている。
 ![テレビ＝インターフェイス](Images/2.5.tvandphone.2.png)
 
+つまり、ユーザーにとっては、ユーザー インターフェイスの名前がそのものの名前となるのである。
 
-ユーザーにとっては、ユーザー インターフェイスの名前がそのものの名前となる。
-
-システムを開発する目的は、顧客の問題をITで解決することである。
+ところで、システムを開発する目的は、顧客の問題をITで解決することである。
 
 従って、目的 (＝顧客の問題解決) が手段 (＝開発) を駆動するべきであり、クライアント視点が重要である。
+![SON](Images/2.5.son.0.svg)
 
-クライアントにサービスを提供
+プログラムの内部でも同様に考えてみよう。利用する側のモジュールがクライアントであり、利用される側がサービス提供側である。
+
+例えば、メソッドを呼ぶ側がクライアント モジュールであり、呼ばれるメソッドはサービス提供側である。
+
+**クライアントにサービスを提供**
 ![SON](Images/2.5.son.1.svg)
 
-クライアント視点でみると: プログラムで使われている名前は、プログラムがクライアントに提供するインタフェイス。
+クライアント視点でみると、プログラムで使われている名前は、サービス提供モジュールがクライアント モジュールに提供するインタフェイスであり、クライアントに提供するサービスの名称である。
 
-名前＝インタフェイス
+- **名前＝インタフェイス**
+- **名前＝サービス**
 
-クライアント視点でみると:プログラムで使われている名前は、プログラムがクライアントに提供するサービスの名称。
+#### 名前重要。
 
-名前＝サービス
+名前はクライアント視点で付けよう。
 
-名前重要。
-
-名前はクライアント視点で。
-
-名前は顧客側の視点で決定。
+**名前は顧客側の視点で決定**
 ![SON](Images/2.5.son.2.svg)
 
-サービス指向の名前付け
+**サービス指向の名前付け**
 ![SON](Images/2.5.son.3.svg)
 
-Service Oriented Naming
+**Service Oriented Naming**
 ![SON](Images/2.5.son.4.svg)
 
 
-### 2.5.1 SONの基本思想
+### 2.5.2 SONの基本思想
 
 Service Oriented Naming(SON)は、**クライアント(利用者)の視点**で名前を決定するアプローチである。重要なのは「提供者がどう実装するか」ではなく、「利用者がどう使いたいか」である。
 
 ![Service Oriented Naming 概念図](Images/service-oriented-naming-concept.md)
 
-### 2.5.2 ユーザーインターフェースとしての名前
+### 2.5.3 ユーザーインターフェースとしての名前
 
 プログラムの名前は、そのコンポーネントの**ユーザーインターフェース**である:
 
@@ -505,7 +507,7 @@ var customer = repository.FindById(customerId);
 // 実装詳細は隠蔽されている
 ```
 
-### 2.5.3 サービスとしてのメソッド
+### 2.5.4 サービスとしてのメソッド
 
 各メソッドは、クライアントに対する**サービス**として設計すべきである:
 
@@ -526,7 +528,7 @@ public class EmailService  // クライアントにメール機能を提供
 }
 ```
 
-### 2.5.4 ドメイン固有の語彙
+### 2.5.5 ドメイン固有の語彙
 
 サービス指向の命名では、そのドメイン(問題領域)で使われる自然な語彙を採用する:
 
