--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -22,8 +22,12 @@
 
 ## 2.1 説明責任(Accountability)
 
-プログラミングとは:
-![暗黙知の形式知化](Images/2.1.accountability.1.svg)
+プログラミングでは、意図を伝えることが重要である。
+![HowからWhatへのパラダイムシフト](Images/2.1.accountability.1.svg)
+
+例を見てみよう。
+
+次のような日付チェックをしたいとする。
 
 例. 「日付チェック」
 - ○ 2007/02/14
@@ -31,6 +35,8 @@
 - × 2007/02/29
 - × 2100/02/29
 - ○ 2000/02/29
+
+1つ目のプログラムは、こんな感じである。
 
 例 1. 「日付チェック (1)」
 
@@ -66,7 +72,9 @@ GetDat(out y, out m, out d);
 ChkFunc2(y, m, d);
 ```
 
-意図がシンプルに表現されているか?
+どうだろうか? 意図がシンプルに表現されているだろうか?
+
+2つ目のプログラムを見てみよう。
 
 例 2. 「日付チェック (2)」
 ```csharp
@@ -96,14 +104,20 @@ public class 日付
 }
 ```
 
-名前付け
+どうだろうか? どちらの意図が明確だろうか。
+
+ソースコードは次のことが重要である:
 - 意図が明確であること
 - 何がやりたいのか?
 - 責務の範囲が明確であること
 - 何をする?
 - 何をしない?
 
-ソースコード自身が説明責任を果たすように記述しよう。
+ソースコードが、自らそれらを語るように書こう。(例. アフォーダンス)
+- ソースコードは設計を語るべき
+- ソースコードは意図を語るべき
+
+ソースコード自身が**説明責任**を果たすように記述しよう。
 
 ## 2.2 命名はモデリングの核心
 
@@ -137,16 +151,6 @@ public class 日付
 →意図をもっとも自然に、頭の中で表現するとどうなる?
 →自分の設計モデル。
 →分かりやすさ。
-
-ソースコードは設計を語るべき。
-ソースコードは意図を語るべき。
-
-それ自身が語る。
-例. アフォーダンス
-
-例えば、或るクラスに “Employee” という名前を付けるということは:
-![暗黙知の形式知化](Images/2.2.modeling.1.svg)
-
 
 ### 2.2.3 モデルとしてのソースコード
 
@@ -262,6 +266,8 @@ Name and Conquer:
 
 ![“Employee” という名前付けで概念の範囲を指定](Images/2.3.nameandconquer.2.svg)
 
+また、或るクラスに “Employee” という名前を付けるということは、暗黙知の形式知化であるとも言えるであろう。
+![暗黙知の形式知化](Images/2.2.modeling.1.svg)
 
 ### 2.3.2 概念の確定と境界設定
 
