--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -147,10 +147,9 @@ public class 日付
 2. **機械が実行できる**:コンピュータが処理できる
 3. **検証可能である**:テストによって正しさを確認できる
 
-頭の中のモデルにもっとも近いもの
-→意図をもっとも自然に、頭の中で表現するとどうなる?
-→自分の設計モデル。
-→分かりやすさ。
+そして、人間が理解しやすいのは、人の「頭の中のモデルにもっとも近いもの」である。
+
+「意図をもっとも自然に、頭の中で表現するとどうなる」が、「その人のモデル」であり、その人にとって分かりやすいものになる。
 
 ### 2.2.3 モデルとしてのソースコード
 
@@ -418,12 +417,12 @@ if (IsValid(name)) …
 - 「テレビ」って何?
 - 「電話」って何?
 
-本来は:
+本来は、
 tele-vision、tele-phone
 ⇒「遠くに映像や音声をとどけるシステム全体の名前」
 の筈である。
 
-じゃー 次の認識は間違いなのだろうか?
+では、次の認識は間違いなのだろうか?
 
 これがテレビ? これが電話?
 ![テレビと電話](Images/2.5.tvandphone.1.png)
