--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -113,7 +113,7 @@ public class 日付
 - 何をする?
 - 何をしない?
 
-ソースコードが、自らそれらを語るように書こう。(例. アフォーダンス)
+ソースコードが、自らそれらを語るように書こう。**アフォーダンス(affordance)**という言葉でも表現できるかもしれない。
 - ソースコードは設計を語るべき
 - ソースコードは意図を語るべき
 
@@ -135,11 +135,11 @@ public class 日付
 - lclusrdafName     読みにくい
 - bool flg = false; 一体何のフラグか分らない
 
-### 2.2.2 「ソースコードを書く」という行為はモデリング
+### 2.2.2 「プログラミング」という行為はモデリング
 
-「ソースコードを書く」という行為を次のように定義したい:
+「プログラミング」という行為を次のように定義したい:
 
-> 「ソースコードを書く」という行為は**設計+実装+テスト**である
+> 「プログラミング」という行為は**設計+実装+テスト**である
 
 これは単純なコーディング作業ではなく、**検証可能な設計/実装モデル**を作成する知的活動である。このモデルは以下の特徴を持つ:
 
