--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -265,7 +265,7 @@ Name and Conquer:
 
 ![“Employee” という名前付けで概念の範囲を指定](Images/2.3.nameandconquer.2.svg)
 
-また、或るクラスに “Employee” という名前を付けるということは、暗黙知の形式知化であるとも言えるであろう。
+そうして “Employee” という名前付けによって、概念が認識できるようになる。これは、暗黙知の形式知化であるとも言えるであろう。
 ![暗黙知の形式知化](Images/2.2.modeling.1.svg)
 
 ### 2.3.2 概念の確定と境界設定
