--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -1,5 +1,6 @@
-# Programming Best Practices and Principles
-## プログラミングベストプラクティスと原則
+# 美しいコードの原則 — 意図を伝える設計と実践
+## ～AI時代だからこそ～
+## (C#/Java/JavaScript/Python などによるサンプル コード付き)
 
 ### 目次
 
