--- a/MarkDown/第9章_チーム開発における品質管理.md
+++ b/MarkDown/第9章_チーム開発における品質管理.md
@@ -421,8 +421,8 @@ public class FileProcessingService
 
 #### 参考
 
-- [C# コーディング ガイドライン (2025年度版)](https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.Japanese.md) (日本語版)
-- [C# Coding Guidelines (2025 Edition)](https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.English.md)  (英語版)
+- [C# コーディング ガイドライン (2025年度版)](https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.Japanese.md) https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.Japanese.md (日本語版)
+- [C# Coding Guidelines (2025 Edition)](https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.English.md) https://github.com/Fujiwo/CSharpCodingGuideline/blob/main/README.English.md  (英語版)
 
 ### 9.2.3 規約の自動化と強制
 
