Fix formatting of 'affordance' term in markdown

--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -113,7 +113,7 @@ public class 日付
 - 何をする?
 - 何をしない?
 
-ソースコードが、自らそれらを語るように書こう。**アフォーダンス(affordance)**という言葉でも表現できるかもしれない。
+ソースコードが、自らそれらを語るように書こう。**アフォーダンス**(affordance)という言葉でも表現できるかもしれない。
 - ソースコードは設計を語るべき
 - ソースコードは意図を語るべき
 
