Updated the content of Chapter 11 and added an explanation of how to practice “Think simple.”

--- a/MarkDown/第11章_終わりに.md
+++ b/MarkDown/第11章_終わりに.md
@@ -393,9 +393,13 @@ public class CreditScoreCalculator
 }
 ```
 
-### 11.3.3 Think Simpleの実践
+### 11.3.3 Think simpleの実践
 
-「Think Simple」という言葉を提唱したい。複雑な問題に対して「どうしよう」と悩むのではなく、複雑になるような羽目に陥らないようにし、常にシンプルに考えよう。
+「**Think simple**」という言葉を提唱したい。
+
+この言葉は、スティーブ・ジョブズがAppleに復帰した後のスローガン「Think different」へのオマージュである。
+
+複雑な問題に対して「どうしよう」と悩むのではなく、複雑になるような羽目に陥らないようにし、常にシンプルに考えよう。
 
 ```csharp
 // ❌ 過度に複雑化された実装
@@ -424,6 +428,11 @@ public class CustomerService
 ```
 
 シンプルさは、理解しやすさ、テストしやすさ、保守しやすさにつながる。複雑な問題に対しても、シンプルな部品の組み合わせで解決することを心がけるべきである。
+
+ただし、シンプルに考えることは、必ずしも容易なことではない。むしろ、プログラマーの腕の見せ所となるのだと思う。
+
+**simple ≠ easy**
+
 
 ## 11.4 次世代への提言
 
