Format quote for consistency in chapter conclusion

--- a/MarkDown/第11章_終わりに.md
+++ b/MarkDown/第11章_終わりに.md
@@ -678,6 +678,6 @@ public class ProgrammerJourney
 
 これからも、美しいコードを追求する旅を続けていこう。その旅路で出会うすべての課題が、我々をより良い技術者に成長させてくれるはずである。
 
-> 「システムの品質はコードに宿る」- 小島富治雄
+**「システムの品質はコードに宿る」**
 
 この言葉を胸に、今日もまた、美しいコードを書き続けよう。
