第8章の内容を更新し、シンプルな考え方に関する新しいセクションを追加

--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -17,7 +17,7 @@
 - プロジェクト固有の制約下での品質維持技法
 
 ### 理論から実践への橋渡し
-「SOLIDの原則は分かったが、実際のプロジェクトでどう使えばいいのか？」「パフォーマンス要件と美しいコードの間で悩んでしまう」──理論を知っていても実践で活用できなければ意味がない。この章は、現実のプロジェクトで直面する様々な制約や要求の中で、美しいコードの原則をどう適用していくかの実践的ガイドである。あなたの手の中にある理論という「道具」を、実際の問題解決に使える「武器」へと変換する技術がここにある。
+「SOLIDの原則は分かったが、実際のプロジェクトでどう使えばいいのか?」「パフォーマンス要件と美しいコードの間で悩んでしまう」──理論を知っていても実践で活用できなければ意味がない。この章は、現実のプロジェクトで直面する様々な制約や要求の中で、美しいコードの原則をどう適用していくかの実践的ガイドである。あなたの手の中にある理論という「道具」を、実際の問題解決に使える「武器」へと変換する技術がここにある。
 
 ---
 
@@ -40,7 +40,103 @@
 3. **信頼性**: 複雑性の減少に伴うバグの減少
 4. **開発効率**: 実装とテストが迅速
 
-### 8.1.2 複雑さの種類と対処法
+### 8.1.2 シンプルに考えるコツ
+
+#### 「冷蔵庫にキリンの原則」(Giraffe-Refrigerator Principle)
+
+どうすればシンプルに考えることができるのだろうか?
+
+例えば、次のような問題を考えてみよう:
+
+>「キリンを冷蔵庫に入れるにはどうする?」
+>(“How do you put a giraffe into a refrigerator?")
+
+どうだろう。様々な考えが浮かぶかも知れない:
+
+>キリンを小さくする? 特大の冷蔵庫を日立に頼んで特別に作ってもらう? 当然キリンは切っちゃ駄目?
+小さいキリンっている?
+
+だが、この問題の答えはこうだ:
+
+>「冷蔵庫のドアを開けて、キリンを入れ、ドアを閉める」
+>(“Open the refrigerator, put in the giraffe and close the door.")
+
+続けて、次の問題に答えてみてほしい:
+
+>「ゾウを冷蔵庫に入れるにはどうする?」
+>(“How do you put an elephant into a refrigerator?")
+
+答えはこうだ:
+
+>「冷蔵庫のドアを開けて、キリンを取り出し、ゾウを入れ、ドアを閉める」
+>(“Open the refrigerator, take out the giraffe, put in the elephant and close the door.")
+
+シンプルに考える。正解が重要なのではなく、考え方をみてほしい。
+
+#### 問題はシンプルなままに
+
+次に挙げるのは、AIを現場に導入しようとしている2人の開発者の会話だ:
+
+>開発者A:「AIを現場に導入していきましょう」
+>開発者B:「でもノウハウを持った経験者がいませんからね」
+>開発者A:「最初は試行錯誤が続くかもしれませんが、これから少しずつ勉強をしながら経験を積んでいくべきかと」
+>開発者B:「でもいまは忙しい時期ですし。それに上の人間はきっと反対しますよ」
+>開発者A:「そういって先延ばししていてはいつまでたっても現状のままですから、徐々にやっていきましょうよ。実績を積んでいけば、上も説得できますし」
+>開発者B:「徐々にじゃ、なかなか効果が見えてこないですね」
+
+前もってリスクを適切に評価するのは重要なことだ。だが、この開発者Bは問題に対して起こってもいない問題をどんどん付け加えていって、問題を複雑にしている。解決方法を提案しても、また新たな問題を持ち出してくる。
+
+問題を、解けない方向に解けない方向にと、持っていっている。しかもそれに気付いていない。
+
+大切なのは、シンプルさである。
+
+**「問題は単純なまま解く。複雑にしない。」**
+
+#### 「サイバラの原則」(Saibara's Principle)
+
+サイバラ(西原理恵子さん)という漫画家のある漫画に数値などの具体的なところは忘れたが、こういうような式が載っていた:
+>1+1=2
+>123×456=たくさん
+>12÷34+56÷78=そんな問題を解かなければならない状況に自分を持っていかない
+
+ところで、著者は以前、次のような相談をされたことがある:
+
+>「バグがいっぱいあってどうにも手が付けられない状態になった場合、どのように修正していけばよいでしょうか? テストとデバッグに、いつもものすごい工数が掛かってしまうので何とかしたいのですが……」
+
+これは難問である。テスト工程のコスト・ダウンは重要で、かつ、やっかいな問題である。
+
+答えは、
+
+**「そんな複雑な状況に自分を持っていかない」**
+
+ことである。
+
+日ごろからなるべくシンプルなコーディングを心掛ける。リファクタリングにより、ソース・コードをなるべく複雑にしない。また、常にテストが走る環境で開発し、レビューなどのフィードバックも継続的に実施する。
+
+そうすることで、「『バグがあり過ぎてどうにも手が付けられなくなるような状態』に自分を持っていかない」ということである。
+
+#### Think simple
+
+- シンプルでない考え方の例:
+  - この複雑な問題をどうやって解こうか?
+  - 将来の複雑な問題にどうやって立ち向かっていくべきだろうか?
+  - どうすればよいのだろうか?
+  - 考え得る解決策をすべて列挙して、そのすべてをよく検討しよう!
+  - 障害になるものをすべて列挙し、そのすべてについて対策を練ろう!
+
+- シンプルに考えるには:
+  - この複雑な問題をどうやって解こうか?
+   - → もっと問題を単純にするにはどうすればよいか?
+  - 将来の複雑な問題にどうやって立ち向かっていくべきだろうか?
+   - → 今後どうやれば問題を複雑にしないで済むだろうか?
+  - どうすればよいのだろうか?
+   - → 何をやろうか?
+  - 考え得る解決策をすべて列挙して、そのすべてをよく検討しよう!
+   - → 現在ある解決策を少しずつ実際に試してみよう。実践結果からのフィードバックによって次の手を調整しよう!
+  - 障害になるものをすべて列挙し、そのすべてについて対策を練ろう!
+   - → できない・やらない理由ばかり列挙せずに、まずはやり始めて、その結果からフィードバックを得よう!
+
+### 8.1.3 複雑さの種類と対処法
 
 #### 偶発的複雑さ(Accidental Complexity)
 
@@ -184,7 +280,7 @@ class TaxCalculationService:
         return TaxRuleSet(rules, default_rate=0.10)
 ```
 
-### 8.1.3 シンプル設計の技法
+### 8.1.4 シンプル設計の技法
 
 #### YAGNI(You Aren't Gonna Need It)原則
 
@@ -311,7 +407,7 @@ class DateFormatter {
 }
 ```
 
-### 8.1.4 二重ループの回避技法
+### 8.1.5 二重ループの回避技法
 
 参考資料で言及されている「二重ループなど書かない」という原則の実践例。
 
