第11章の「Think Simple」のセクションを修正し、内容を明確化。シンプルさの重要性を強調する文を追加。

--- a/MarkDown/第11章_終わりに.md
+++ b/MarkDown/第11章_終わりに.md
@@ -393,11 +393,7 @@ public class CreditScoreCalculator
 }
 ```
 
-### 11.3.3 Think simpleの実践
-
-「**Think simple**」という言葉を提唱したい。
-
-この言葉は、スティーブ・ジョブズがAppleに復帰した後のスローガン「Think different」へのオマージュである。
+### 11.3.3 Think Simpleの実践
 
 複雑な問題に対して「どうしよう」と悩むのではなく、複雑になるような羽目に陥らないようにし、常にシンプルに考えよう。
 
@@ -431,7 +427,7 @@ public class CustomerService
 
 ただし、シンプルに考えることは、必ずしも容易なことではない。むしろ、プログラマーの腕の見せ所となるのだと思う。
 
-**simple ≠ easy**
+**Simple ≠ Easy**
 
 
 ## 11.4 次世代への提言
