--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -29,6 +29,9 @@
 
 ### 8.1.1 シンプルさの価値
 
+「**Think Simple**」という言葉を提唱したい。
+この言葉は、スティーブ・ジョブズがAppleに復帰した後のスローガン「Think different」へのオマージュである。
+
 「Think Simple」は、プログラミングにおける最も重要な指針の一つである。この原則は、**複雑な問題を解くよりも、複雑な問題に陥らないようにすること**を重視する。
 
 > 「複雑な問題を解くにはどうしたら良いか。複雑な問題を解くような羽目に陥らないようにする。」
@@ -115,7 +118,7 @@
 
 そうすることで、「『バグがあり過ぎてどうにも手が付けられなくなるような状態』に自分を持っていかない」ということである。
 
-#### Think simple
+#### Think Simple
 
 - シンプルでない考え方の例:
   - この複雑な問題をどうやって解こうか?
